# AndroidHelper

./: .gitignore  .gitmodules  .project  CMakeLists.txt  LeetCode.cpp  README.md  Student.template  build.gradle  builder.gradle  config.gradle  flannery  gradle.properties  import-summary.txt  local.properties  main.cpp  other.gradle  settings.gradle  trait.gradle  房型设计Skechup.skp
CustomView/: build.gradle
FlutterHelper/: flutter.rp
GradleDownloadPlugin/: .gitignore  build.gradle  efox.gradle  settings.gradle
anrwatchdog/: build.gradle
app/: .project  build.gradle
app_tablayout_usecase/: .gitignore  build.gradle  proguard-rules.pro
bTAndroidWebViewSelection/: build.gradle
base/: build.gradle
buildSrc/: build.gradle
confictJD/: .project  build.gradle
cpp/: CMakeLists.txt  LeetCode.cpp  README.md  main.cpp
cpp/common/: Node.cpp  Review.h  iterator.cpp  iterator.h
cpp/demo/: CMakeLists.txt  hexoct2.cpp  hexoct2.h  limits.cpp  limits.h  main.cpp
cpp/practice/statics/: StaticDemo.h
cpp/practice/vectors/: vect1.cpp
cpp/readme/: 容器.md
cpp/src/: LeetCode.h  main.cpp
cpp/src/common/: Node.h  Review.cpp  iterator.h
cpp/src/datastruct/: Graph.cpp  Graph.h
cpp/src/practice/alogs/: usealgo.cpp  usealgo.h
cpp/src/practice/arrays/: valvect.cpp  valvect.h
cpp/src/practice/fuctors/: FunctorsTest.cpp  FunctorsTest.h  funadap.cpp  funadap.h
cpp/src/practice/lists/: ListTest.cpp  ListTest.h  ilist.cpp  ilist.h  listrmv.cpp  listrmv.h
cpp/src/practice/map/: MultiMaps.cpp  MultiMaps.h
cpp/src/practice/mmap/: mmap_demo.cpp  mmap_demo.h  test.txt
cpp/src/practice/sets/: setops.cpp  setops.h
cpp/src/practice/statics/: StaticDemo.cpp
cpp/src/practice/strings/: strgst1.cpp  strgst1.h
cpp/src/practice/vectors/: VectorTest.cpp  copyit.cpp  copyit.h  inserts.cpp  inserts.h  vect1.h  vect2.cpp  vect2.h  vect3.cpp  vect3.h
cpp/src/utils/: Utils.cpp  Utils.h
cpp/untitled/: CMakeLists.txt
cpp/utils/: Utils.cpp  Utils.h
cpp/xcode/Test/Test/: main.cpp
cpp/xcode/Test/Test.xcodeproj/: project.pbxproj
cpp/xcode/Test/Test.xcodeproj/project.xcworkspace/xcuserdata/flannery.xcuserdatad/: UserInterfaceState.xcuserstate
dialogs/: build.gradle
edittextselection/: .project  build.gradle
ffmpeg/: build.gradle
ffmpeg/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ffmpeg2/: build.gradle
flowlayout/: build.gradle
flutter_helper/: pubspec.yaml
gradledemo/: .project  Test.java  Test2.java
gradletest/: build.gradle
javas/: .gitignore
jetpackapp/: build.gradle
jetpackapp2/: build.gradle  maindexlist.pro  maindexlist.txt
lauchmode/: build.gradle
leakcanary22/: build.gradle
leetcode/: .gitignore  .project  build.gradle
lottie/: .project  build.gradle
material/: Android动画.md  Coordinatorlayout_behavior.md  NestedScrollingChildHelper.java  NestedScrollingParentHelper.java  ViewParentCompat.java
multilanguage/: .project  build.gradle
performance/: .project
practice/: VectorTest.h
router-annotations/: build.gradle
router-gradle-plugin/: .gitignore  build.gradle
router-processor/: build.gradle
router_mapping/: mapping_1625908477439.json
routerdemo/: build.gradle
rxjava1/: build.gradle
rxjava207/: build.gradle
shell/: map.sh  map2.sh  map3.sh  scrcpy.sh
startmodeup/: build.gradle
textautosizing-example/: build.gradle
toolbar/: Toolbar2.java  build.gradle
utils/: Utils.cpp  Utils.h  build.gradle
viewpagerdemo/: README.md  build.gradle
vip-v3-net/: pom.xml
webviewdemo/: build.gradle
whale/: build.gradle
xplay/: CMakeLists.txt
xplay2/: build.gradle
yy需求/: yy需求.rp  需求开发流程.md
文章/: 五、程序中段的使用.md  六、const的使用.md
源码/: AsyncTask.java  LeakCanary1.6.3.md  性能优化.md
生活琐碎/: 买房装修.rp
设计模式/: 中介者模式.md  创建型_单例模式.md  创建型_原型模式.md  创建型_工厂方法模式.md  创建型_抽象工厂模式.md  创建型_生成器模式.md  结构型_享元模式.md  结构型_代理模式.md  结构型_外观模式.md  结构型_桥接模式.md  结构型_组合模式.md  结构型_适配器模式.md  行为_中介者模式.md  行为_命令模式.md  行为_备忘录模式.md  行为_模板方法模式.md  行为_状态模式.md  行为_策略模式.md  行为_观察者模式.md  行为_访问者模式.md  行为_责任链模式.md  行为_迭代器模式.md  装饰着模式.md
资料/: EVPlayer.txt  androidsupport-androidx.md
面试/: ANR.md  (+7 more)
(+4159 files in other folders)
